[workspace]
members = [
    "lez-sdk",
    "lez-sdk-macros",
    "examples/counter",
    "examples/cpi-example",
    "examples/counter-guest",
]
resolver = "2"

[workspace.dependencies]
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "006647bc" }
borsh = { version = "1.5", features = ["derive"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
