[package]
name = "lez-sdk"
version = "0.1.0"
edition = "2021"
description = "Minimal Rust SDK for LEZ programs"
license = "MIT OR Apache-2.0"

[dependencies]
lez-sdk-macros = { path = "../lez-sdk-macros" }
nssa_core = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
