[package]
name = "counter-methods-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "counter"
path = "src/bin/counter.rs"

[dependencies]
lez-sdk = { path = "../../lez-sdk" }
counter = { path = "../../examples/counter" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "006647bc" }
borsh = { version = "1.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
risc0-zkvm = { version = "1.1", default-features = false, features = ["std"] }
