[package]
name = "cpi-example"
version = "0.1.0"
edition = "2021"

[dependencies]
lez-sdk = { path = "../../lez-sdk" }
borsh = { version = "1.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "006647bc" }
